# n8n-labs

./: .env.example  .gitignore  compose.dev.yml  compose.yml
bot/: Dockerfile  README.md  index.js  package-lock.json  package.json
docker/: arch-sandbox.Dockerfile  mcp-content.Dockerfile  mcp-eeg-dataset.Dockerfile  mcp-web-scraper.Dockerfile
docker/requirements/: requirements-content.txt
templates/: assistant-personnel.md  cv.tex  output.md
tools/mcp/mcp_content_creation/: pyproject.toml
tools/mcp/mcp_content_creation/docs/: README.md
tools/mcp/mcp_content_creation/mcp_content_creation/: __init__.py  server.py  tools.py
tools/mcp/mcp_content_creation/scripts/: test_server.py
tools/mcp/mcp_content_creation/tests/: test_content_creation.py
tools/mcp/mcp_core/: pyproject.toml
tools/mcp/mcp_core/docs/: EMOTIONS.md  EXPRESSION.md  README.md
tools/mcp/mcp_core/mcp_core/: __init__.py  base_server.py  client.py  client_registry.py  http_proxy.py  utils.py
tools/mcp/mcp_core/mcp_core/cognition/: __init__.py  active_listening.py  emotion_transition.py  escalation.py  fast_mind.py  fillers.py  orchestrator.py  slow_mind.py  types.py
tools/mcp/mcp_core/mcp_core/emotions/: __init__.py  inference.py  mappings.py  taxonomy.py
tools/mcp/mcp_core/mcp_core/expression/: __init__.py  orchestrator.py  types.py
tools/mcp/mcp_core/mcp_core/personality/: __init__.py  memory.py
tools/mcp/mcp_core/tests/: test_client.py  test_cognition.py  test_cognition_advanced.py  test_emotions.py  test_expression.py  test_personality.py
tools/mcp/mcp_eeg_dataset/: README.md  pyproject.toml  requirements.txt
tools/mcp/mcp_eeg_dataset/docs/: README.md
tools/mcp/mcp_eeg_dataset/mcp_eeg_dataset/: __init__.py  server.py  tools.py
tools/mcp/mcp_eeg_dataset/scripts/: test_server.py
tools/mcp/mcp_eeg_dataset/tests/: test_eeg_dataset.py
tools/mcp/mcp_web_scraper/: README.md  pyproject.toml  requirements.txt
tools/mcp/mcp_web_scraper/docs/: README.md
tools/mcp/mcp_web_scraper/mcp_web_scraper/: __init__.py  server.py  tools.py
tools/mcp/mcp_web_scraper/scripts/: test_server.py
tools/mcp/mcp_web_scraper/tests/: __init__.py  test_web_scraper.py
