[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-content-creation"
version = "1.0.0"
description = "Content Creation MCP Server - Manim animations and LaTeX compilation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AndrewAltimit"},
]
keywords = ["mcp", "content_creation", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp-core>=1.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pylint>=2.17.0",
]

[project.urls]
"Homepage" = "https://github.com/AndrewAltimit/template-repo"
"Bug Reports" = "https://github.com/AndrewAltimit/template-repo/issues"
"Source" = "https://github.com/AndrewAltimit/template-repo/tree/main/tools/mcp/mcp_content_creation"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_content_creation"]

[tool.setuptools.package-data]
mcp_content_creation = [
    "py.typed",
    "docs/*.md",
    "scripts/*.sh",
]

[tool.black]
line-length = 127
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 127
known_first_party = ["mcp_content_creation", "mcp_core"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
