[tool.poetry]
name = "mcp_eeg_dataset"
version = "0.1.0"
description = "MCP tool for EEG dataset management and querying from MongoDB."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pymongo = "^4.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
